--- a/index.html
+++ b/index.html
@@ -2,10 +2,45 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="icon" type="image/jpg" href="/FCXX.jpg" />
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FincopX</title>
+  <title>FincopX – Best Loan & Property Services in India</title>
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "FinancialService",
+  "name": "FinCopX",
+  "image": "https://yourdomain.com/FCX.png",  // Replace with your actual image URL
+  "@id": "https://yourdomain.com/",
+  "url": "https://yourdomain.com/",
+  "telephone": "+91-8424020461",  // Replace with your business phone
+  "address": {
+    "@type": "PostalAddress",
+    "streetAddress": "Sector 17, New Pnavel",  // Example — change to actual
+    "addressLocality": "Navi Mumbai",
+    "addressRegion": "MH",
+    "postalCode": "410206",
+    "addressCountry": "IN"
+  },
+  "geo": {
+    "@type": "GeoCoordinates",
+    "latitude": "19.0330",  // Approx for Navi Mumbai — update if needed
+    "longitude": "73.0297"
+  },
+  "openingHours": "Mo-Sa 10:00-19:00",
+  "sameAs": [
+    "https://www.facebook.com/YourPage",  // Replace or remove if not applicable
+    "https://www.instagram.com/YourPage",
+    "https://www.linkedin.com/company/YourPage"
+  ],
+  "description": "FinCopX is a trusted DSA in Navi Mumbai and Panvel offering personal, home, and business loan support from top banks and NBFCs. We offer ethical, transparent, and customer-first financial services."
+}
+</script>
+
+<meta name="description" content="Apply for personal loans, home loans, and explore top property deals with FincopX. Trusted by 1000+ customers across India.">
+<meta name="keywords" content="loan, property, DSA, home loan, personal loan, FincopX, mortgage, best interest rates, real estate India">
+
   </head>
   <body>
     <div id="root"></div>
