--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/jpg" href="/FCXX.jpg" />
+    <!-- <link rel="icon" type="image/jpg" href="/FCXX.jpg" />~ -->
+    <link rel="shortcut icon" href="favfcx.png" type="image/x-icon">
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>FincopX – Best Loan & Property Services in India</title>
