--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <!-- <link rel="icon" type="image/jpg" href="/FCXX.jpg" />~ -->
-    <link rel="shortcut icon" href="favfcx.png" type="image/x-png">
+   <link rel="icon" href="/favfcx.png" type="image/png" />
+
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>FincopX – Best Loan & Property Services in Navi Mumbai India</title>
