--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>FincopX – Best Loan & Property Services in Navi Mumbai India</title>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-HS7RTV1Z15"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-HS7RTV1Z15');
+</script>
   <script type="application/ld+json">
 {
   "@context": "https://schema.org",
