--- a/index.html
+++ b/index.html
@@ -2,58 +2,79 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <!-- <link rel="icon" type="image/jpg" href="/FCXX.jpg" />~ -->
-   <link rel="icon" href="/favfcx.png" type="image/png" />
-
-    
+    <link rel="icon" href="/favfcx.png" type="image/png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>FincopX – Best Loan & Property Services in Navi Mumbai India</title>
-  <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-HS7RTV1Z15"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    <title>FincopX – Best Loan & Property Services in Navi Mumbai India</title>
 
-  gtag('config', 'G-HS7RTV1Z15');
-</script>
-  <script type="application/ld+json">
-{
-  "@context": "https://schema.org",
-  "@type": "FinancialService",
-  "name": "FinCopX",
-  "image": "https://yourdomain.com/FCX.png",  // Replace with your actual image URL
-  "@id": "https://yourdomain.com/",
-  "url": "https://yourdomain.com/",
-  "telephone": "+91-8424020461",  // Replace with your business phone
-  "address": {
-    "@type": "PostalAddress",
-    "streetAddress": "Sector 17, New Pnavel",  // Example — change to actual
-    "addressLocality": "Navi Mumbai",
-    "addressRegion": "MH",
-    "postalCode": "410206",
-    "addressCountry": "IN"
-  },
-  "geo": {
-    "@type": "GeoCoordinates",
-    "latitude": "19.0330",  // Approx for Navi Mumbai — update if needed
-    "longitude": "73.0297"
-  },
-  "openingHours": "Mo-Sa 10:00-19:00",
-  "sameAs": [
-    "https://www.facebook.com/YourPage",  // Replace or remove if not applicable
-    "https://www.instagram.com/YourPage",
-    "https://www.linkedin.com/company/YourPage"
-  ],
-  "description": "FinCopX is a trusted DSA in Navi Mumbai and Panvel offering personal, home, and business loan support from top banks and NBFCs. We offer ethical, transparent, and customer-first financial services."
-}
-</script>
+    <!-- Meta Pixel Code -->
+    <script>
+      !function(f,b,e,v,n,t,s)
+      {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+      n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+      if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+      n.queue=[];t=b.createElement(e);t.async=!0;
+      t.src=v;s=b.getElementsByTagName(e)[0];
+      s.parentNode.insertBefore(t,s)}(window, document,'script',
+      'https://connect.facebook.net/en_US/fbevents.js');
+      fbq('init', '1102172385111873');
+      fbq('track', 'PageView');
+    </script>
+    <!-- End Meta Pixel Code -->
 
-<meta name="description" content="Apply for personal loans, home loans, and explore top property deals with FincopX. Trusted by 1000+ customers across India.">
-<meta name="keywords" content="loan, property, DSA, home loan, personal loan, FincopX, mortgage, best interest rates, real estate India">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-HS7RTV1Z15"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-HS7RTV1Z15');
+    </script>
 
+    <!-- Structured Data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "FinancialService",
+      "name": "FinCopX",
+      "image": "https://yourdomain.com/FCX.png",
+      "@id": "https://yourdomain.com/",
+      "url": "https://yourdomain.com/",
+      "telephone": "+91-8424020461",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "Sector 17, New Panvel",
+        "addressLocality": "Navi Mumbai",
+        "addressRegion": "MH",
+        "postalCode": "410206",
+        "addressCountry": "IN"
+      },
+      "geo": {
+        "@type": "GeoCoordinates",
+        "latitude": "19.0330",
+        "longitude": "73.0297"
+      },
+      "openingHours": "Mo-Sa 10:00-19:00",
+      "sameAs": [
+        "https://www.facebook.com/YourPage",
+        "https://www.instagram.com/YourPage",
+        "https://www.linkedin.com/company/YourPage"
+      ],
+      "description": "FinCopX is a trusted DSA in Navi Mumbai and Panvel offering personal, home, and business loan support from top banks and NBFCs. We offer ethical, transparent, and customer-first financial services."
+    }
+    </script>
+
+    <meta name="description" content="Apply for personal loans, home loans, and explore top property deals with FincopX. Trusted by 1000+ customers across India.">
+    <meta name="keywords" content="loan, property, DSA, home loan, personal loan, FincopX, mortgage, best interest rates, real estate India">
   </head>
+
   <body>
+    <!-- Facebook Pixel NoScript (Must be in body!) -->
+    <noscript>
+      <img height="1" width="1" style="display:none"
+        src="https://www.facebook.com/tr?id=1102172385111873&ev=PageView&noscript=1"/>
+    </noscript>
+    <!-- End NoScript -->
+
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
